# InteractiveBrokersPlatform

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  decision_mapper.py  gunicorn.conf.py  main.py  pyproject.toml  qsl.toml  requirements.txt  runtime_config_support.py  runtime_execution_policy.py  strategy_loader.py  strategy_registry.py  strategy_runtime.py
application/: execution_service.py  feature_snapshot_service.py  ibkr_order_execution.py  ibkr_portfolio.py  monitor_dispatcher.py  portfolio_risk_diagnostics.py  rebalance_service.py  reconciliation_service.py  runtime_broker_adapters.py  runtime_composer.py  runtime_deadline.py  runtime_dependencies.py  runtime_notification_adapters.py  runtime_reporting_adapters.py  runtime_strategy_adapters.py  signal_snapshot.py
configs/: paper_global_etf_rotation.rollback.env.example  paper_mega_cap_leader_rotation_dynamic_top20.env.example
docs/: hk_equity_runtime.md  ibkr_paper_top50_switch.md  ibkr_runtime_rollout.md
entrypoints/: cloud_run.py
notifications/: renderers.py  telegram.py
research/: README.md  README_stock_alpha.md  backtest_growth_pullback_v1_4_cash_buffer_refinement.py  backtest_growth_pullback_v1_5_freeze_review.py  backtest_hybrid_growth_continuous_scaling_followup.py  backtest_hybrid_growth_idle_throttle_followup.py  backtest_hybrid_growth_indicator_variants.py  backtest_hybrid_growth_position_scaling_followup.py  backtest_qqq_tech_enhancement_daily_overlay.py  backtest_qqq_variants.py  backtest_stock_alpha_suite.py  backtest_stock_alpha_v1_robustness.py  backtest_tqqq_growth_continuous_scaling_followup.py  backtest_tqqq_growth_idle_throttle_followup.py  backtest_tqqq_growth_indicator_variants.py  backtest_tqqq_growth_position_scaling_followup.py  backtest_video_qqq_tqqq_dual_drive.py
scripts/: build_cloud_run_env_sync_plan.py  cloud_run_runtime_guard.py  execution_report_heartbeat.py  print_strategy_profile_status.py  print_strategy_switch_env_plan.py  reconcile_cloud_runtime.py  sync_run_scheduler_deadlines.py  validate_cloud_run_startup.py
tests/: conftest.py  test_account_group_examples.py  test_cloud_run_entrypoint.py  test_cloud_run_runtime_guard.py  test_cloud_run_startup_validation.py  test_cloud_run_warmup_workflow.py  test_connect_timeout_alert.py  test_decision_mapper.py  test_event_loop.py  test_execution_report_heartbeat.py  test_execution_service.py  test_feature_snapshot_service.py  test_growth_pullback_v1_4_cash_buffer_refinement.py  test_growth_pullback_v1_5_freeze_review.py  test_hybrid_growth_continuous_scaling_followup.py  test_hybrid_growth_idle_throttle_followup.py  test_hybrid_growth_indicator_variants.py  test_hybrid_growth_position_scaling_followup.py  test_ibkr_order_execution.py  test_ibkr_portfolio.py  (+29 more)
(+32 files in other folders)
