[project]
name = "interactive-brokers-platform"
version = "0.1.0"
description = "QuantStrategyLab platform layer for Interactive Brokers."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "numpy",
    "requests",
    "pytz",
    "pandas-market-calendars",
    "ib-insync",
    "google-auth",
    "google-cloud-compute",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "yfinance",
]
