[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-brokers-platform"
version = "0.1.0"
description = "QuantStrategyLab platform layer for Interactive Brokers."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "numpy",
    "requests",
    "pytz",
    "pandas-market-calendars",
    "ib-insync",
    "google-auth",
    "google-cloud-compute",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "yfinance",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
