[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-brokers-platform"
version = "0.3.0"
description = "QuantStrategyLab platform layer for Interactive Brokers."
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "pandas",
    "numpy",
    "requests",
    "pytz",
    "pandas-market-calendars",
    "ib-insync",
    "google-auth",
    "google-cloud-compute",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "yfinance",
    "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@0063af3b4a974650ea58a7d3f26dd1b94f65d3e8",
    "us-equity-strategies @ git+https://github.com/QuantStrategyLab/UsEquityStrategies.git@cd959e30e91e57697ad878d98799c1afb43bf5fb",
    "hk-equity-strategies @ git+https://github.com/QuantStrategyLab/HkEquityStrategies.git@61993bf261aeccf64b5a75428b9405f4e1d1d682",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*", "*/external/*"]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
py-modules = [
  "decision_mapper",
  "main",
  "runtime_config_support",
  "runtime_execution_policy",
  "runtime_logging",
  "strategy_loader",
  "strategy_registry",
  "strategy_runtime",
]

[tool.setuptools.packages.find]
include = [
  "application*",
  "entrypoints*",
  "notifications*",
  "scripts*",
  "strategy*",
]
